feat: added total count of logs to api res
